--- a/UnrealRuby/UnrealRuby.vcxproj.filters
+++ b/UnrealRuby/UnrealRuby.vcxproj.filters
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <Filter Include="Platform">
+      <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\Windows">
+      <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
+    </Filter>
     <Filter Include="UnrealRuby">
       <UniqueIdentifier>{4E13C918-3ACB-0A66-A3D2-E3C18FA9A556}</UniqueIdentifier>
     </Filter>
@@ -9,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
+      <Filter>Platform\Windows</Filter>
+    </ClInclude>
     <ClInclude Include="src\UnrealRuby.h" />
     <ClInclude Include="src\UnrealRuby\Application.h">
       <Filter>UnrealRuby</Filter>
@@ -34,13 +43,21 @@
     <ClInclude Include="src\UnrealRuby\Log.h">
       <Filter>UnrealRuby</Filter>
     </ClInclude>
+    <ClInclude Include="src\UnrealRuby\Window.h">
+      <Filter>UnrealRuby</Filter>
+    </ClInclude>
+    <ClInclude Include="src\urpch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
+      <Filter>Platform\Windows</Filter>
+    </ClCompile>
     <ClCompile Include="src\UnrealRuby\Application.cpp">
       <Filter>UnrealRuby</Filter>
     </ClCompile>
     <ClCompile Include="src\UnrealRuby\Log.cpp">
       <Filter>UnrealRuby</Filter>
     </ClCompile>
+    <ClCompile Include="src\urpch.cpp" />
   </ItemGroup>
 </Project>
