--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "UnrealRuby/vendor/GLFW"]
 	path = UnrealRuby/vendor/GLFW
 	url = https://github.com/Reuben17/glfw
+[submodule "UnrealRuby/vendor/imgui"]
+	path = UnrealRuby/vendor/imgui
+	url = https://github.com/Reuben17/imgui
+[submodule "UnrealRuby/vendor/glm"]
+	path = UnrealRuby/vendor/glm
+	url = https://github.com/g-truc/glm
