--- a/UnrealRuby/UnrealRuby.vcxproj.filters
+++ b/UnrealRuby/UnrealRuby.vcxproj.filters
@@ -4,6 +4,9 @@
     <Filter Include="Platform">
       <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Platform\OpenGL">
+      <UniqueIdentifier>{1E7D2C1D-8A08-9AE1-9319-1DD6FF23F6E1}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Platform\Windows">
       <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
     </Filter>
@@ -13,8 +16,17 @@
     <Filter Include="UnrealRuby\Events">
       <UniqueIdentifier>{723BFAE6-DE51-F87C-27C9-839E931EC904}</UniqueIdentifier>
     </Filter>
+    <Filter Include="UnrealRuby\ImGui">
+      <UniqueIdentifier>{F84A5245-E443-7197-0D76-561CF9CD50A3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\Windows\WindowsInput.h">
+      <Filter>Platform\Windows</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
       <Filter>Platform\Windows</Filter>
     </ClInclude>
@@ -25,7 +37,7 @@
     <ClInclude Include="src\UnrealRuby\Core.h">
       <Filter>UnrealRuby</Filter>
     </ClInclude>
-    <ClInclude Include="src\UnrealRuby\Entrypoint.h">
+    <ClInclude Include="src\UnrealRuby\EntryPoint.h">
       <Filter>UnrealRuby</Filter>
     </ClInclude>
     <ClInclude Include="src\UnrealRuby\Events\ApplicationEvent.h">
@@ -40,7 +52,25 @@
     <ClInclude Include="src\UnrealRuby\Events\MouseEvent.h">
       <Filter>UnrealRuby\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\UnrealRuby\ImGui\ImGuiLayer.h">
+      <Filter>UnrealRuby\ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\UnrealRuby\Input.h">
+      <Filter>UnrealRuby</Filter>
+    </ClInclude>
+    <ClInclude Include="src\UnrealRuby\KeyCodes.h">
+      <Filter>UnrealRuby</Filter>
+    </ClInclude>
+    <ClInclude Include="src\UnrealRuby\Layer.h">
+      <Filter>UnrealRuby</Filter>
+    </ClInclude>
+    <ClInclude Include="src\UnrealRuby\LayerStack.h">
+      <Filter>UnrealRuby</Filter>
+    </ClInclude>
     <ClInclude Include="src\UnrealRuby\Log.h">
+      <Filter>UnrealRuby</Filter>
+    </ClInclude>
+    <ClInclude Include="src\UnrealRuby\MouseButtonCodes.h">
       <Filter>UnrealRuby</Filter>
     </ClInclude>
     <ClInclude Include="src\UnrealRuby\Window.h">
@@ -49,10 +79,25 @@
     <ClInclude Include="src\urpch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
+      <Filter>Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
+      <Filter>Platform\Windows</Filter>
+    </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
       <Filter>Platform\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\UnrealRuby\Application.cpp">
+      <Filter>UnrealRuby</Filter>
+    </ClCompile>
+    <ClCompile Include="src\UnrealRuby\ImGui\ImGuiLayer.cpp">
+      <Filter>UnrealRuby\ImGui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\UnrealRuby\Layer.cpp">
+      <Filter>UnrealRuby</Filter>
+    </ClCompile>
+    <ClCompile Include="src\UnrealRuby\LayerStack.cpp">
       <Filter>UnrealRuby</Filter>
     </ClCompile>
     <ClCompile Include="src\UnrealRuby\Log.cpp">
