--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,42 +4,50 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
+ViewportPos=892,111
+ViewportId=0xE927CF2F
+Size=275,673
 Collapsed=0
 
-[Window][Dear ImGui Stack Tool]
+[Window][Example: Log]
+Pos=1017,24
+Size=349,509
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][DockSpace Demo]
+Size=1366,697
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=277,535
+Size=1089,162
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Test]
 Pos=60,60
-Size=354,104
+Size=89,58
 Collapsed=0
 
-[Window][Dear ImGui Metrics/Debugger]
+[Window][Hi]
 Pos=60,60
-Size=339,307
+Size=32,40
 Collapsed=0
 
-[Window][Dear ImGui Debug Log]
+[Window][Science]
 Pos=60,60
-Size=533,156
+Size=142,86
 Collapsed=0
 
-[Window][Example: Console]
-Pos=60,60
-Size=520,600
-Collapsed=0
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
 
-[Window][Same title as another window##1]
-Pos=100,100
-Size=451,61
-Collapsed=0
-
-[Window][Same title as another window##2]
-Pos=100,200
-Size=451,61
-Collapsed=0
-
-[Window][###AnimatedTitle]
-Pos=100,300
-Size=247,48
-Collapsed=0
+[Docking][Data]
+DockSpace     ID=0x3BC79352 Pos=0,47 Size=1366,673 Split=Y Selected=0xE87781F4
+  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=1366,509 Split=X
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=929,556 CentralNode=1
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=349,556 Selected=0xDBFE1153
+  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=1366,162 Selected=0xE7652686
 
