--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,10 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=892,111
-ViewportId=0xE927CF2F
-Size=275,673
-Collapsed=0
+Pos=3,5
+Size=285,672
+Collapsed=1
 
 [Window][Example: Log]
 Pos=1017,24
@@ -16,7 +15,7 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][DockSpace Demo]
-Size=1366,697
+Size=1280,720
 Collapsed=0
 
 [Window][Example: Property editor]
@@ -36,8 +35,13 @@ Size=32,40
 Collapsed=0
 
 [Window][Science]
-Pos=60,60
-Size=142,86
+Pos=0,1
+Size=776,97
+Collapsed=0
+
+[Window][Settings]
+Pos=8,334
+Size=344,64
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
@@ -45,9 +49,9 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Pos=0,47 Size=1366,673 Split=Y Selected=0xE87781F4
+DockSpace     ID=0x3BC79352 Pos=78,64 Size=1280,696 Split=Y Selected=0xE87781F4
   DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=1366,509 Split=X
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=929,556 CentralNode=1
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=929,556 CentralNode=1 Selected=0xE87781F4
     DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=349,556 Selected=0xDBFE1153
   DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=1366,162 Selected=0xE7652686
 
